--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
-name: ngo_donor_app
+# name: ngo_donor_app
+name: food_share_connect
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
